--- a/4DimenssionLLC/Views/Home/Index.cshtml
+++ b/4DimenssionLLC/Views/Home/Index.cshtml
@@ -594,7 +594,7 @@
 
 
 
-									<div class="button-container mt-3">
+									<div class="button-container">
 										<div class="row">
 											<div class="col-md-6 btn-mbl-reset">
 										<button type="reset" class="btn-reset">Reset</button>
