--- a/4DimenssionLLC/Views/Home/Index.cshtml
+++ b/4DimenssionLLC/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <!--TITLE-->
-<title>4Dimension LLC</title>
+<title>4Dimensions LLC</title>
 
 <!--ICON-->
 <link rel="shortcut icon" href="~/logo-ico.ico">
@@ -115,7 +115,7 @@
 				<td>
 					<section >
 @* 						<h5 class="sub-title">Welcome To 4Dimension LLC</h5>
- *@						<h1 class="title">Human Management</h1>
+ *@						<h1 class="title">4Dimensions LLC Mission</h1>
 						<p class="human-para">An opportunity to lead as a DSP, you are only as strong as your team of delivery associates. Your leadership won’t just set them up for success on the road today, but wherever their career takes them. Successful candidates are passionate about hiring and coaching, building a strong company culture, and giving back to the community.</p>
 						<a href="#sections" data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="btn1">Explore More</a>
 					</section>
@@ -488,7 +488,7 @@
 		</div>
 
 		<div class="sub-footer">
-			Copyright © 2024 4Dimension LLC, All Rights Reserved
+			Copyright © 2024 4Dimensions LLC, All Rights Reserved
 		</div>
 
 	</footer>
@@ -823,7 +823,7 @@
 					Address: $("#address").val(),
 					Message: $("#message").val(),
 				};
-				console.log(JSON.stringify(formData));
+				//console.log(JSON.stringify(formData));
 
 				// AJAX request to submit form data
 				$.ajax({
