--- a/4DimenssionLLC/Views/Home/Index.cshtml
+++ b/4DimenssionLLC/Views/Home/Index.cshtml
@@ -1177,7 +1177,7 @@
 			img.alt = event.name;
 
 			const caption = document.createElement('div');
-			caption.classList.add('carousel-caption', 'd-none', 'd-md-flex');
+			caption.classList.add('carousel-caption', 'd-md-flex');
 
 			// Add static heading title
 			const heading = document.createElement('h4');
