--- a/4DimenssionLLC/Views/Home/Index.cshtml
+++ b/4DimenssionLLC/Views/Home/Index.cshtml
@@ -131,8 +131,8 @@
 			</tr> *@
 		</table>
 	</div>
-	<h1 class="title clr-black ourTeamHead"> Our Team </h1>
-	<section class="ourTeam" id="our-team"></section>
+	<h1 id="our-team" class="title clr-black ourTeamHead"> Our Team </h1>
+	<section class="ourTeam" ></section>
 
 	<hr class="hr-color" />
 
@@ -175,14 +175,14 @@
 
 		</div>
 	</section>
-	<hr class="hr-color" />
+@* 	<hr class="hr-color" /> *@
 
 	<!--CONTAINER-->
 	<div class="container section" id="fleetManagement">
 		<table>
 			<tr>
                 <td>
-					<img src="~/images/01.webp" class="inline-photo show-on-scroll" alt="About Us">
+					<img src="~/images/image-main-2.png" class="inline-photo show-on-scroll" alt="About Us">
 				</td>
 				<td>
 @* 					<h6 class="sub-title">Discover Our Company</h6>
@@ -211,7 +211,7 @@
 					</div>
 				</td>
                 <td>
-					<img src="~/images/r.jpg" class="inline-photo show-on-scroll img-setting" alt="About Us">
+					<img src="~/images/0_amazon-delivery-van.webp" class="inline-photo show-on-scroll img-setting" alt="About Us">
 				</td>
 			</tr>
 		</table>
@@ -507,7 +507,7 @@
 				<div class="modal-header justify-content-center text-center">
 					<a href="#" class="LogoAnch"><img class="logo-width" src="~/images/4dlogo.png" /></a>
 
-					<h2 class="modal-title lg-view" id="staticBackdropLabel">Contact</h2>
+					<h2 class="modal-title lg-view" id="staticBackdropLabel">SUPPORT</h2>
 					<button type="button" class="btn-close bg-light" data-bs-dismiss="modal" aria-label="Close" style="opacity: 1;"></button>
 
 				</div>
@@ -566,7 +566,7 @@
 
 									<div class="container mt-3">
 										<div class="row">
-											<div class="col-md-6 mb-2 mbl-view-btn">
+											<div class="col-md-2 mb-2 mbl-view-btn">
 												<div class="icon-label">
 													<button type="button" class="btn green" id="btn-Like">
 														<div class="icon-label-content">
@@ -577,7 +577,7 @@
 												</div>
 											</div>
 
-											<div class="col-md-6 mb-2  mbl-view-btn2">
+											<div class="col-md-2 mb-2  mbl-view-btn2">
 												<div class="icon-label">
 													<button type="button" class="btn heart-react heart" id="btn-Love">
 														<div class="icon-label-content">
